--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.6"
 actix-web = "1.0"
 bytes = "0.4"
 futures = "0.1"
+failure = "0.1"
 diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }
 r2d2 = "0.8"
 
